--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build]
-base = "client"
-publish = "client/dist"
-command = "npm run build"
-[functions]
-directory = "netlify/functions"
+  base = "client"
+  command = "npm --prefix client run build"
+  publish = "client/client/dist"
+  functions = "client/netlify/functions"
