--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
   base = "client"
-  command = "npm --prefix client run build"
+  command = "npm --prefix client/client ci && npm --prefix client/client run build"
   publish = "client/client/dist"
   functions = "client/netlify/functions"
